--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
     <footer>
       <p>
-        <u>author</u>: <strong>m <i>akbar</i> pribadi</strong> <em>2023</em>
+        <u>authore</u>: <strong>m <i>akbar</i> pribadi</strong> <em>2023</em>
       </p>
     </footer>
     <br />
